# MICRO-2026-ARC

./: .gitmodules  LICENSE  README.md
AE1/: .gitignore  README.md  THIRD_PARTY_NOTICES.md
AE1/trace_analysis/: README.md  regenerate.sh
AE1/trace_analysis/figure2/: figure_page_dist.py  run_fig2.sh
AE1/trace_analysis/figure5/: figure_th_sweep.py  run_fig5.sh
AE1/trace_analysis/figure7/: figure_access_dist.py  run_fig7.sh
AE2/: .gitignore  README.md  THIRD_PARTY_NOTICES.md
AE2/program_script/: program_spr1.sh  update_cdf_paths.sh
AE2/set_default/: setup_default.sh
AE2/sw/benchmark/: run_gapbs.sh  run_spec.sh  runner_controls.sh
AE2/sw/build_option_th16/: run_fig4_th16.sh
AE2/sw/build_option_th32/: run_fig4_th32.sh
AE2/sw/build_option_th64/: run_fig4_th64.sh
AE2/sw/build_option_th96/: run_fig4_th96.sh
AE2/sw/fig4/: plot_memory_migration.py  requirements.txt  run_fig4.sh  (+1 more)
AE3/: .gitignore  FIGURE3_REPRODUCTION.md  README.md  THIRD_PARTY_NOTICES.md
AE3/program_script/: chmu_ae_merge_SPL1.cdf  power_cycle_remote.sh
AE3/set_default/: setup_default.sh
AE3/sw/migration_manager/: CMakeLists.txt
AE3/sw/migration_manager/include/: csr.h  worker.h
AE3/sw/migration_manager/src/: csr.cpp
AE4/: .gitignore  FIGURE11_REPRODUCTION.md  README.md  THIRD_PARTY_NOTICES.md
AE4/program_script/: chmu_ae_merge_SPL2.cdf  chmu_ae_merge_SPL4.cdf  power_cycle_remote.sh  program_spr1.sh
AE4/set_default/: setup_default.sh
AE4/sw/: run_figure11_benchmark.sh
kernel/: .gitignore  README.md  SHA256SUMS  SOURCE_SHA256SUMS  THIRD_PARTY_NOTICES.md
kernel/configs/: config-6.11.0-mig-offload+
kernel/patches/: 0001-micro-arc-mig-offload.patch
kernel/scripts/: build_kernel.sh  install_kernel.sh  prepare_source.sh  verify_kernel.sh
rtl/: README.md  THIRD_PARTY_NOTICES.md
(+165 files in other folders)
